gccida/g2/ix86_expand_epilogue
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_epilogue/src/i386.c:4932:22: error: use of undeclared identifier 'machine_mode'
v26 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 2); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_epilogue/src/i386.c:4936:31: error: use of undeclared identifier 'machine_mode'
v28 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v27, global_rtl[4], v26); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_epilogue/src/i386.c:4942:22: error: use of undeclared identifier 'machine_mode'
v31 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[4]); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_epilogue/src/i386.c:4948:31: error: use of undeclared identifier 'machine_mode'
v34 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v27, global_rtl[2], v26); 
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_epilogue/src/obj/i386.o] Error 1
